# translateVideo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PUBLIC_ROADMAP.md  README.md  TESTING_RULES.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.agents/designer/: AGENT.md  design-log.md
.agents/qa-monitor/: AGENT.md  qa-report.md
.agents/skill-modernizer/: AGENT.md  modernizer-log.md
.agents/tech-writer/: AGENT.md  user-stories.md
docs/: CI_STRATEGY_FINAL_REPORT.md  README.md  architecture.md  backlog_tasks.md  cloud-models.md  deployment.md  development-process.md  implementation_plan.md  manual-testing.md  professional-translation-infrastructure.md  testing-strategy.md  ui_implementation_plan.md  webhooks.md
docs/ci-reports/: iter1_fba_dev_summary.md  iter1_fba_user_report.md
docs/reports/: README.md  ui_user_agents_review_2026-05-01.md  ui_user_agents_review_2026-05-04.md
docs/wiki/: README.md  agents.md  roadmap.md
runs/google_antigravity__the_end_of_coding__and_the_rise_of_the_it_b/: project.json  settings.json
scripts/: README.md  bump_version.py  css_guard.py  generate_pwa_icons.mjs  log_analyze.py  test_cloud_providers.py  validate_changelog.py
src/: README.md
src/translate_video/: README.md  __init__.py  cli.py  webhook.py
tests/: README.md  test_core_config.py  test_core_schemas.py  test_core_store.py  test_core_webhooks.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.fullstack.config.ts  playwright.visual.config.ts  vitest.config.ts
ui/e2e/: README.md  (+2 more)
(+228 files in other folders)
