[project]
name = "translate-video"
version = "1.30.1"
description = "Движок ИИ-перевода видео с CLI и UI-интерфейсами."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy==1.0.3",
    "faster-whisper",
    "deep-translator",
    "edge-tts",
    "pydub",
    "fastapi",
    "uvicorn",
    "httpx",
    "python-multipart",
    "ruaccent",
]

[project.optional-dependencies]
dev = ["coverage[toml]"]

[project.scripts]
translate-video = "translate_video.cli:main"

[tool.coverage.run]
source = ["translate_video"]
omit = ["*/legacy.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
